plan link change